--- a/CSSPages/style.css
+++ b/CSSPages/style.css
@@ -1,2 +1,53 @@
 /* CSS Document */
+<link href="style.css" rel="stylesheet" type="text/css"/>
+h1{
+  color:olivedrab;
+  text-decoration:underline;
+}
 
+body{
+  background-color:rgb(233, 196, 255);
+}
+
+h2{
+  color:rgb(165, 76, 76)
+}
+
+h3{
+  color: royalblue; 
+}
+
+h4{
+  color:rgb(5, 140, 218);
+}
+
+p{
+  color: orangered;
+}
+p1{
+  color: midnightblue;
+}
+p2{
+  color: salmon;
+}
+
+div {
+			width: 250px;
+			height: 40px;
+			border: 4px double hotpink;
+			transition: background-color 2s;
+      text-align: center;
+
+		}
+		.wrong:hover {
+			background-color: red;
+		}
+		.correct:hover {
+			background-color: chartreuse;
+		}
+.place{
+    border-style:double;
+    border-width:20px;
+    border-color: brown;
+
+  }
