Small Lab 7 Updates

--- a/CSSPages/style.css
+++ b/CSSPages/style.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-	<link href="style.css" rel="stylesheet" type="text/css"/>
+/*This is the External Stylesheet*/
 
 h1{
   color:olivedrab;
